tests/cases/fail/test_generic_struct_typepos.ixc
//@ error: generic struct instantiation ('Option<...>') is not supported yet
// A generic struct used concretely in type position ('Option<i32>') needs
// monomorphization (a later stage); until then it is rejected, not laid out.

struct Option<T> { present: bool, value: T }

proc take(o: Option<i32>) {}

@export
proc main() i32 { return 0; }
